# sphinx-slides

./: .gitattributes  .readthedocs.yaml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: conf.py  index.rst
src/sphinx-slides/: _version.py
